log-output/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-writer
          image: log-writer/image
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: shared-logs
              mountPath: /shared
          resources:
            requests:
              cpu: "100m"
              memory: "16Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
        - name: log-reader
          image: log-reader/image
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-logs
              mountPath: /shared
            - name: configmap
              mountPath: /config
          resources:
            requests:
              cpu: "100m"
              memory: "16Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 3000
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
            claimName: shared-data-pvc
        - name: configmap
          configMap:
            name: logoutput-configmap
